--- a/digital_agency/style.css
+++ b/digital_agency/style.css
@@ -66,6 +66,7 @@ nav button{
 .hero .r1{
     display: flex;
     justify-content: space-evenly;
+    
     grid-column: 1/2;
     grid-row: 1/2;
 }
@@ -81,6 +82,7 @@ nav button{
     background-image: url(https://img.freepik.com/free-vector/dark-hand-painted-alcohol-ink-background-with-glittery-gold-elements_1048-16748.jpg);
     border-radius: 30px;
     width: 30%;
+    transition: all 1s ease-out;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top left;
