--- a/Ape_NFT_black/footer-resp.css
+++ b/Ape_NFT_black/footer-resp.css
@@ -51,13 +51,13 @@ footer{
 }
 .footer-col1{
     width: 100%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 .footer-col3{
     width: 100%;
     color: white;
     padding: 0;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
 }
 .footer-tags{
     display: flex;
